<resources>
    <string name="app_name">万众艺兴</string>
    <string name="login">登录</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_password_register">请输入密码(6到20位,数字和字母的组合)</string>
    <string name="enter_new_password">请输入新密码(6到20位,数字和字母的组合)</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="wrong_phone_number">错误的手机格式</string>
    <string name="wrong_password">密码格式错误</string>
    <string name="empty_auth_code">验证码格式错误</string>
    <string name="on_registering">注册中...</string>
    <string name="on_logining">登录中...</string>
    <string name="fragment_home">首页</string>
    <string name="fragment_near">附近</string>
    <string name="fragment_forum">论坛</string>
    <string name="fragment_order">订单</string>
    <string name="fragment_mine">我的</string>
    <string name="skip">跳过>></string>
    <string name="username">用户名</string>
    <string name="avatar">头像</string>
    <string name="personal_info">个人信息</string>
    <string name="collection">收藏</string>
    <string name="comment">评价</string>
    <string name="bill">账单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_balance">我的余额</string>
    <string name="spec_balance">￥0.00</string>
    <string name="my_discount_coupon">我的抵用券</string>
    <string name="spec_discount_coupon">0张待使用</string>
    <string name="my_point">我的积分</string>
    <string name="spec_point">%s分</string>
    <string name="share_to_friends">分享好友</string>
    <string name="call_center">客服中心</string>
    <string name="cooperation">我要合作</string>
    <string name="about">关于万众艺兴</string>
    <string name="account_setting">账户设置</string>
    <string name="birthday">生日</string>
    <string name="unknown">未知</string>
    <string name="account_binding">账号绑定</string>
    <string name="phone_number">手机号</string>
    <string name="unbind">未绑定</string>
    <string name="we_chat">微信</string>
    <string name="wei_bo">微博</string>
    <string name="a_li_pay">支付宝</string>
    <string name="qq">QQ</string>
    <string name="gender">性别</string>
    <string name="setting">设置</string>
    <string name="nickname">昵称</string>
    <string name="change_password">修改密码</string>
    <string name="alter">修改</string>
    <string name="sign_in_success">登录成功</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="please_input">请输入</string>
    <string name="confirm">确定</string>
    <string name="nickname_cannot_be_empty">昵称不能为空</string>
    <string name="alter_gender">修改性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender_secret">保密</string>
    <string name="alter_password">修改密码</string>
    <string name="code_send_success">发送成功</string>
    <string name="code_send_failure">发送失败</string>
    <string name="password_altering">密码修改中...</string>
    <string name="alter_password_success">密码修改成功</string>
    <string name="alter_password_failure">密码修改失败</string>
    <string name="get_user_info_failure">用户信息获取失败</string>
    <string name="get_user_info_success">用户信息获取成功</string>
    <string name="alter_nickname_success">昵称修改成功</string>
    <string name="alter_nickname_failure">昵称修改失败</string>
    <string name="nickname_altering">昵称修改中...</string>
    <string name="gender_altering">性别修改中...</string>
    <string name="alter_gender_success">性别修改成功</string>
    <string name="alter_gender_failure">性格修改失败</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">本地</string>
    <string name="cancel">取消</string>
    <string name="camera_permission_denied">不允许拍照，程序将无法正常运行</string>
    <string name="camera_permission_never_ask">永久拒绝相机权限，程序将无法正常运行</string>
    <string name="crop_error">裁剪出错</string>
    <string name="crop_avatar">裁剪头像</string>
    <string name="upload_avatar_success">头像上传成功</string>
    <string name="upload_avatar_failure">头像上传失败</string>
    <string name="not_set_nickname">未设置昵称</string>
    <string name="logout">退出登录</string>
    <string name="security_setting">安全设置</string>
    <string name="general">通用</string>
    <string name="account_management">账号管理</string>
    <string name="real_name_certification">实名认证</string>
    <string name="login_password">登录密码</string>
    <string name="certification">认证</string>
    <string name="uncertification">未认证</string>
    <string name="clear_cache">清空缓存</string>
    <string name="check_update">检查更新</string>
    <string name="cache_size">42.15MB</string>
    <string name="position">宁波</string>
    <string name="comprehensive_order">综合排序</string>
    <string name="cost_order">费用</string>
    <string name="distance_order">距离最近</string>
    <string name="enroll_number">已有%s人报名</string>
    <string name="activity_cost">￥%s</string>
    <string name="activity_distance">%skm</string>
    <string name="locate_permission_denied">定位权限未开启，程序将无法正常运行</string>
    <string name="locate_permission_never_ask">永久拒绝定位权限，程序将无法正常运行</string>
    <string name="locate_error">定位失败</string>
    <string name="locate">定位</string>
    <string name="please_locate_first">请先点击定位按钮\n获取位置信息</string>
    <string name="get_activity_list_failure">获取活动信息失败</string>
    <string name="activity_info">活动详情</string>
    <string name="RMB">￥</string>
    <string name="enroll_activity">立即报名</string>
    <string name="activity_load_failure">活动加载失败</string>
    <string name="activity_intro_title">活动介绍</string>
    <string name="activity_period">活动时间</string>
    <string name="collect_success">收藏成功</string>
    <string name="submit_order">提交订单</string>
    <string name="total_cost">总计</string>
    <string name="submit_order_success">订单提交成功</string>
    <string name="submit_order_failure">订单提交失败</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="pay_order">支付订单</string>
    <string name="pay_name">英孚教育</string>
    <string name="pay_charge">￥125.0</string>
    <string name="empty">这里空空如也</string>
    <string name="go_to_locate">去定位</string>
    <string name="twice_back">再按一次退出万众艺兴</string>
    <string name="pay">确认支付</string>
    <string name="get_order_info_failure">获取订单信息失败</string>
    <string name="my_order">我的订单</string>
    <string name="go_to_pay">去支付</string>
    <string name="refund">退款</string>
    <string name="completed">已完成</string>
    <string name="paid">已支付</string>
    <string name="commented">已评价</string>
    <string name="canceled">已取消</string>
    <string name="order_id">订单号：%s</string>
    <string name="order_empty">还没有该类型订单哦～</string>
    <string name="wait_for_pay">待支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failure">支付失败</string>
    <string name="refund_money">退款金额</string>
    <string name="refund_desc">退款说明</string>
    <string name="refund_hint">填写退款说明，让我们更好的改正</string>
    <string name="submit_apply">提交申请</string>
    <string name="delete">删除</string>
    <string name="order_delete_success">订单删除成功</string>
    <string name="order_delete_failure">订单删除失败</string>
    <string name="apply_refund_success">退款申请成功</string>
    <string name="apply_refund_failure">退款申请失败</string>
    <string name="refunding">退款中</string>
    <string name="refund_success">退款成功</string>
    <string name="confirm_delete_order">你确定要删除该订单吗？</string>
    <string name="confirm_cancel_order">你确定要取消该订单吗？</string>
    <string name="confirm_delete_order_tip">订单删除后将不可恢复</string>
    <string name="confirm_cancel_order_tip">订单取消后将不可恢复</string>
    <string name="order_cannot_delete">该订单不可删除</string>
    <string name="order_cannot_cancel">该订单不可取消</string>
    <string name="order_cancel_success">订单取消成功</string>
    <string name="order_cancel_failure">订单取消失败</string>
    <string name="left_time">还剩：%s</string>
    <string name="left_time_tip">超时未支付订单将会自动取消</string>
    <string name="left_time_pay">剩余时间</string>
    <string name="left_time_pay_tip">%s</string>
    <string name="wzyx">万众艺兴</string>
    <string name="copyright">嘉兴万众物联科技有限公司 版权所有\n
        Copyright © 2015- 2025 Allelink.com.cn\n
        All Rights Reserved
    </string>
    <string name="activity_evaluate">查看活动评价</string>
    <string name="activity_evaluate_message">活动评价信息</string>
    <string name="user_evaluate_message">我的评价</string>
    <string name="evaluate_level">为活动打分</string>
    <string name="write_evaluate">写下您对活动的评价吧 (@^o^@)</string>
    <string name="commit_comment">提交评论</string>
</resources>
