<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_eee"
    android:layout_height="match_parent">
    <!--导航栏开始-->
    <com.allelink.wzyx.ui.TitleBar
        android:id="@+id/tb_edit_nickname"
        android:background="@color/white"
        app:titleColor="@color/black_666"
        app:titleSize="6sp"
        app:leftButtonBackground="@drawable/btn_back_selector"
        app:titleText="@string/alter_nickname"
        android:layout_width="match_parent"
        android:layout_height="48dp">
    </com.allelink.wzyx.ui.TitleBar>
    <!--导航栏结束-->
    <!--昵称输入开始-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_333"
            android:textSize="16sp"
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_edit_nickname"
            android:textSize="16sp"
            android:textColorHint="@color/black_999"
            android:layout_gravity="center_vertical"
            android:hint="@string/please_input"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--昵称输入结束-->
    <Button
        android:id="@+id/btn_edit_nickname_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/confirm"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_confirm_selector"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="44dp" />
</LinearLayout>