<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--导航栏开始-->
    <com.allelink.wzyx.ui.TitleBar
        android:id="@+id/tb_evaluate_order_activity"
        app:titleText="评价订单"
        app:titleSize="6sp"
        app:titleColor="@color/black_333"
        app:leftButtonBackground="@drawable/btn_back_blue_selector"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp">
    </com.allelink.wzyx.ui.TitleBar>
    <!--导航栏结束-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RatingBar
        android:id="@+id/rb_evaluateLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_evaluate_level_hint"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black_666"
        android:text="@string/evaluate_level"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.AppCompatEditText

        android:padding="10dp"
        android:background="@drawable/edit_boder"
        android:gravity="start"
        android:id="@+id/et_order_evaluate"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/write_evaluate"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="10dp"
        android:id="@+id/btn_order_evaluate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit_comment"
        android:background="@drawable/btn_confirm_selector"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>


</android.support.v7.widget.LinearLayoutCompat>